--- a/CppProject/22.10.10 - MMO TCPFighter Server/22.10.10 - MMO TCPFighter Server.vcxproj
+++ b/CppProject/22.10.10 - MMO TCPFighter Server/22.10.10 - MMO TCPFighter Server.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MakePacket.cpp" />
+    <ClCompile Include="ProtocolBuffer.cpp" />
+    <ClCompile Include="RingBuffer.cpp" />
     <ClCompile Include="Sector.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Session.cpp" />
@@ -167,7 +169,10 @@
     <ClInclude Include="Define.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="MakePacket.h" />
+    <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Protocol.h" />
+    <ClInclude Include="ProtocolBuffer.h" />
+    <ClInclude Include="RingBuffer.h" />
     <ClInclude Include="Sector.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="Session.h" />
